--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "'create a be-jons'",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +19,11 @@
   },
   "homepage": "https://github.com/veenabhavani5050/be-jobs#readme",
   "dependencies": {
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "mongoose": "^8.14.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
